--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,11 +13,9 @@ import Fom from '../components/Fom.vue';
     <!-- ===== Contact us section Start ===== -->
     <section id="support" class="px-4 md:px-8 2xl:px-0 ">
 
-        <div class="mx-auto max-w-c-1390 relative pt-10  lg:pt-15 xl:pt-20 px-7.5 lg:px-15 xl:px-20 overflow-hidden">
+        <div class="mx-auto relative px-4 overflow-hidden">
             <div
-                    class="animate_top text-center mx-auto sm:flex justify-around"
-
-            >
+                class="animate_top text-center mx-auto sm:flex justify-around">
                 <h2 class="font-bold text-3xl xl:text-sectiontitle3 text-black dark:text-white md:w-4/5 xl:w-1/2 mx-auto py-10 ">Contact Us</h2>
             </div>
             <div class="absolute -z-1 rounded-lg left-0 top-0 w-full h-2/3 bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-[#24283E] dark:to-[#252A42]"></div>
@@ -29,33 +27,7 @@ import Fom from '../components/Fom.vue';
                 <img src="/images/shape/shape-dotted-dark.svg" alt="Dotted" class="hidden dark:block" />
             </div>
 
-            <Fom client:only="vue"/>
-
-<!--
-                <div class="animate_top w-full md:w-2/5 lg:w-[26%] md:p-7.5 xl:pt-15">
-                    <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-semibold mb-12.5">Find us</h2>
-
-                    <div class="mb-7 5">
-                        <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Our Location</h4>
-                        <p>124 City Road, London, EC1V 2NX United Kingdom</p>
-                    </div>
-                    <div class="mb-7 5">
-                        <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Email Address</h4>
-                        <p><a href="#">sales@fortremote.pro</a></p>
-                    </div>
-                    <div>
-                        <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Phone Number</h4>
-                        <p><a href="#">+44 121 790 1866</a></p>
-                        <p><a href="#">+1 267-995-8208</a></p>
-                    </div>
-                    <div class="pt-2">
-                        <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">WhatsApp Number</h4>
-                        <p><a href="#">+1 267-995-8208</a></p>
-                    </div>
-
-                </div>
--->
-
+                <Fom client:only="vue"/>
             </div>
 
 
