--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -270,11 +270,10 @@ import ClientsSlider from '../components/ClientsSlider.vue'
             </h2>
             <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
               <div class="inline-flex">
-                <a href="#" class="faq-cta">
-                    Sign up
+                <a href="/contact" class="faq-cta">
+                    Let's Talk
                     <div class="arrow-wrapper">
                         <div class="arrow"></div>
-
                     </div>
                 </a>
               </div>
@@ -285,40 +284,6 @@ import ClientsSlider from '../components/ClientsSlider.vue'
       </section>
       <!-- ===== FAQ End ===== -->
 
-      <!-- ===== Testimonials Start ===== -->
-      <section>
-        <div class="mx-auto max-w-c-1315 px-4 md:px-10 xl:px-20">
-          <!-- Section Title Start -->
-          <div
-            class="animate_top text-center mx-auto">
-            <div
-              class="animate_top text-center mx-auto"
-            >
-              <div class="bg-zumthor dark:bg-blacksection dark:border dark:border-strokedark inline-block rounded-full py-1.5 px-4.5 mb-4">
-                <h4 class="font-medium text-sectiontitle text-black dark:text-white">TESTIMONIALS</h4>
-              </div>
-              <h2 class="font-bold text-3xl xl:text-sectiontitle3 text-black dark:text-white md:w-4/5 xl:w-1/2 mx-auto mb-4">Client’s Testimonials</h2>
-              <p class="mx-auto md:w-4/5 lg:w-3/5 xl:w-[46%]">
-                Discover what our satisfied clients have to say about their experiences with Your Remote Business Solutions. These testimonials reflect the exceptional results and value we provide to businesses like yours.
-              </p>
-            </div>
-          </div>
-          <!-- Section Title End -->
-        </div>
-
-        <div class="animate_top mx-auto max-w-c-1235 px-4 md:px-10 xl:px-20 mt-15 xl:mt-20">
-          <!-- Slider main container -->
-          <div class="swiper testimonial-01 pb-22.5">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-                <Testimonials client:only="vue" />
-            </div>
-
-          </div>
-        </div>
-      </section>
-      <!-- ===== Testimonials End ===== -->
 </Layout>
 
 <style>
