--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from '../components/Header.vue'
 import Footer from '../components/Footer.astro'
-import Chat1 from "../components/Chat1.vue";
+import Chat from "../components/Chat.vue";
 import { ViewTransitions } from 'astro:transitions';
 
 
@@ -43,7 +43,7 @@ const { title } = Astro.props;
     <Footer />
     <!-- ===== Contact us section End ===== -->
     <div>
-        <Chat1 client:only="vue"/>
+        <Chat client:only="vue"/>
     </div>
     <!-- ===== Footer End ===== -->
 
