fix hero image issue again

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
                 <img src="/images/shape/shape-02.svg" alt="shape" class="absolute right-0 bottom-0" />
                 <img src="/images/shape/shape-03.svg" alt="shape" class="absolute -right-6.5 bottom-0" />
                 <div>
-                  <Image is:raw src={FortImage} alt="Fort Remote Services"/>
+                  <img src={FortImage.src} alt="Fort Remote Services"/>
                 </div>
               </div>
             </div>
