adjust image site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,12 +61,12 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
               </div>
             </div>
             <div class="col-span-6 hidden lg:block">
-              <div class="relative lg:w-3/4">
-                <img src="/images/shape/shape-01.png" alt="shape" class="absolute -left-11.5 top-0" />
+              <div class="relative -ml-32">
+                <img src="/images/shape/shape-01.png" alt="shape" class="absolute top-0" />
                 <img src="/images/shape/shape-02.svg" alt="shape" class="absolute right-0 bottom-0" />
                 <img src="/images/shape/shape-03.svg" alt="shape" class="absolute -right-6.5 bottom-0" />
                 <div>
-                  <Image src={FortImage} alt="Fort Remote Services"/>
+                  <Image src={FortImage} class:list="h-[400px]" alt="Fort Remote Services"/>
                 </div>
               </div>
             </div>
