--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,12 +27,12 @@ const acronym: {letter: string, description:string, icon?: string }[] = [
   {letter:"T", description:"The 'T' signifies 'Technical Prowess.' In the digital age, data management requires advanced techniques. FORT leverages cutting-edge technology, ensuring your financial data is secure, accurate, and accessible."},
 ]
 
-const our_story_points: {description:string}[] = [
-  {description:"🌍 Worldwide Presence: What began as a regional endeavor has transformed into a global journey. Fort Remote Services has expanded its reach far beyond borders, serving clients across continents."},
-  {description:"💼 Over 1,000 Happy Clients: It's not about the numbers, but they do tell a story. With a dedicated team and unwavering commitment to excellence, we've earned the trust and satisfaction of over 1,000 clients worldwide."},
-  {description:"📆 A Decade of Excellence: For over a decade, we've been on a relentless pursuit of perfection. Our journey, which began ten years ago, has been marked by continuous learning, growth, and innovation."},
-  {description:"📈 Scaling Our Arsenal: Starting with a few software tools, we've grown into a technology powerhouse. Our toolkit now boasts a diverse array of cutting-edge software solutions, enabling us to tackle even the most complex tasks with ease."},
-  {description:"📚 Evolving from Bookkeeping to Data Entry: We've come a long way from our roots in bookkeeping. Today, we offer a comprehensive suite of services, including precise and efficient data entry. The journey has been about evolution, expansion, and staying ahead of the digital curve."},
+const our_story_points: {title:string, description:string}[] = [
+  {title:"Worldwide Presence", description:"What began as a regional endeavor has transformed into a global journey. Fort Remote Services has expanded its reach far beyond borders, serving clients across continents."},
+  {title:"Over 1,000 Happy Clients", description:"It's not about the numbers, but they do tell a story. With a dedicated team and unwavering commitment to excellence, we've earned the trust and satisfaction of over 1,000 clients worldwide."},
+  {title:"A Decade of Excellence",description:"For over a decade, we've been on a relentless pursuit of perfection. Our journey, which began ten years ago, has been marked by continuous learning, growth, and innovation."},
+  {title:"Scaling Our Arsenal",description:"Starting with a few software tools, we've grown into a technology powerhouse. Our toolkit now boasts a diverse array of cutting-edge software solutions, enabling us to tackle even the most complex tasks with ease."},
+  {title:"Evolving from Bookkeeping to Data Entry",description:"We've come a long way from our roots in bookkeeping. Today, we offer a comprehensive suite of services, including precise and efficient data entry. The journey has been about evolution, expansion, and staying ahead of the digital curve."},
 ]
 
 const why_choose_us_points: {title: string,description:string, icon:string}[] = [
@@ -150,15 +150,24 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
               <p class="text-lg">
                 From One Region to a Global Force: Unleashing the Power of Digital Bookkeeping and Data Entry Services
               </p>
-              {
-                  our_story_points.map(point => {
-                    return (
-                      <>
-                        <p class="text-sm text-slate-500 py-2">{point.description}</p>
-                      </>
-                    )
-                  })
-              }
+              <ul class="list-none">
+                  {
+                      our_story_points.map(point => {
+                        return (
+                          <>
+                            <li class="text-sm text-slate-500 py-2 flex space-x-2">
+                              <span>
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="20px" x="0" y="0" viewBox="0 0 682.667 682.667" style="enable-background:new 0 0 512 512" xml:space="preserve" class="stroke-0 stroke-green-600"><g><defs><clipPath id="b" clipPathUnits="userSpaceOnUse"><path d="M0 512h512V0H0Z" opacity="1"></path></clipPath></defs><mask id="a"><rect width="100%" height="100%" fill="#ffffff" opacity="1" data-original="#ffffff"></rect></mask><g mask="url(#a)"><path d="m0 0-134.174-134.174-63.873 63.872" style="stroke-width:40;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="matrix(1.33333 0 0 -1.33333 473.365 251.884)" fill="none" stroke-width="40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" class=""></path><g clip-path="url(#b)" transform="matrix(1.33333 0 0 -1.33333 0 682.667)"><path d="M0 0c0-130.339-105.661-236-236-236S-472-130.339-472 0s105.661 236 236 236S0 130.339 0 0Z" style="stroke-width:40;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(492 256)" fill="none" stroke-width="40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" class=""></path></g></g></g></svg>
+                              </span>
+                              <div>
+                                <b>{point.title}</b>{point.description}
+                              </div>
+                            </li>
+                          </>
+                        )
+                      })
+                  }
+              </ul>
             </div>
           </div>
         </div>
