fix: more adjustments to text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,7 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
   {title:"Security and Compliance", icon:"choose-secure", description:"We make your data security our top priority. Your sensitive information is handled with the utmost care, and we rigorously adhere to industry standards and regulations, ensuring the safety of your business's most valuable asset."},
   {title:"Continuous Improvement", icon:"choose-continuous", description:"We're not just bookkeepers; we're dedicated to being industry leaders. Our team continually updates their skills and knowledge to provide you with the best, most innovative solutions possible. Your business deserves nothing less."},
   {title:"Scalability", icon:"choose-scalable", description:"As your business grows, we're right there with you. Our services are designed to scale alongside your needs. Whether you require more bookkeeping hours, additional data entry support, or expanded customer care coverage, we've got you covered. Your growth is our opportunity."},
+  {title:"Expertise and Experience", icon:"choose-expertise", description:"Our team consists of certified bookkeepers and data entry specialists with a wealth of experience in the industry. We stay up-to-date with the latest trends and technologies to deliver the highest quality service."},
 ]
 ---
 
@@ -51,8 +52,8 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
           <div class="grid grid-cols-1 lg:grid-cols-12 lg:items-center lg:gap-8 xl:gap-32.5">
             <div class="col-span-6 text-white">
               <h1 class="dark:text-white text-3xl xl:text-7xl font-bold mb-5">
-                Unlock Efficiency, Accuracy, and
-                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1 bg-gradient-to-r from-teal-400 to-yellow-200 bg-clip-text text-transparent">Excellence</span>
+                Revolutionizing
+                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1 bg-gradient-to-r from-teal-400 to-yellow-200 bg-clip-text text-transparent">Bookkeeping & Data Entry</span> Services
               </h1>
               <p class="text-xl">Your All-in-One Hub for Remote Business Support Services!</p>
 
@@ -148,7 +149,7 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
             <div class="w-5/6">
 
               <p class="text-lg">
-                From One Region to a Global Force: Unleashing the Power of Digital Bookkeeping and Data Entry Services
+                Expanding from Local Excellence to a Globally Trusted Brand
               </p>
               <ul class="list-none">
                   {
