--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,8 +52,8 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
           <div class="grid grid-cols-1 lg:grid-cols-12 lg:items-center lg:gap-8 xl:gap-32.5">
             <div class="col-span-6 text-white">
               <h1 class="dark:text-white text-3xl xl:text-7xl font-bold mb-5">
-                Revolutionizing
-                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1 bg-gradient-to-r from-teal-400 to-yellow-200 bg-clip-text text-transparent">Bookkeeping & Data Entry</span> Services
+                Redefining
+                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1 bg-gradient-to-r from-teal-400 to-yellow-200 bg-clip-text text-transparent">SME</span> Bookkeeping & Data Entry
               </h1>
               <p class="text-xl">Your All-in-One Hub for Remote Business Support Services!</p>
 
