more content fixes

--- a/src/pages/get-quote.astro
+++ b/src/pages/get-quote.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import GetQuote from '../components/GetQuote.vue'
 ---
 
-<Layout title="Our services.">
+<Layout title="Get A Quote">
 
     <!-- ===== Contact us section Start ===== -->
     <section id="support" class="px-4 md:px-8 2xl:px-0 ">
