--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const why_choose_us_points: {title: string,description:string, icon:string}[] = 
 ]
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Financial Operations & Reporting Techniques">
 	 <!-- ===== Hero Start ===== -->
       <section class="pt-16 xl:pt-24 pb-20 xl:pb-25 overflow-hidden bg-[#007675]">
         <div class="mx-auto max-w-c-1390 px-4 md:px-10 xl:px-20">
