--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,8 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+      <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+      <link rel="sitemap" href="/sitemap-index.xml" />
       <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FFS1T2V8ZV"></script>
     <script>
