--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import ClientsSlider from '../components/ClientsSlider.vue'
 
 let base = '/images/badges/', badge_names = [
     'qbo-advanced.svg','qbo-desktop.svg',
-  'qbo-online.svg','qbo-payroll.svg', 'zoho.png',
+  'qbo-online.svg','qbo-payroll.svg', 'Digital bookkeeper.png', 'zoho.png',
     'xero.png'
 ]
 const certifications = badge_names.map(name => `${base}${name}`)
